plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.2.0.5505"
}

group = 'org.keinus'
version = '0.2.2'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	maven {
        url "http://192.168.50.22:8081/repository/maven-central/"
		allowInsecureProtocol = true
    }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation "io.krakens:java-grok:0.1.9"
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: '3.3.5'
	implementation 'org.apache.httpcomponents:httpclient'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
